crates/solidity-v2/testing/snapshots/diagnostics_output/compilation/missing_file/generated/solc/0.8.8-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Source "lib/missing.sol" not found: File not found.
   ╭─[main.sol:4:1]
   │
 4 │ import "lib/missing.sol";
   │ ────────────┬────────────  
   │             ╰────────────── Error occurred here.
───╯
